# mem0-mcp-blueprint

./: Cargo.toml  Cargo.toml.liquid  Dockerfile  README.md  cargo-generate.toml  remappings.txt
.github/workflows/: verify-template.yml
blueprint/: Cargo.toml
blueprint/src/: lib.rs
blueprint/src/manager/: docker.rs  mem0.rs  mod.rs
contracts/src/: MemoryBlueprint.sol
examples/: memory_operations.rs  task_orchestrator_integration.rs
fixtures/: 04_mem0_basic.json  05_mem0_custom.json  06_mem0_api_only.json
hooks/: pre.rhai
mem0-blueprint-bin/: Cargo.toml  Cargo.toml.liquid  build.rs
mem0-blueprint-bin/src/: benchmark.rs  main.rs
mem0-blueprint-lib/: Cargo.toml
mem0-blueprint-lib/src/: benchmarks.rs  lib.rs  mcp.rs
mem0-blueprint-lib/tests/: e2e.rs
{{project-name}}-bin/: Cargo.toml.liquid  build.rs
{{project-name}}-bin/src/: main.rs
{{project-name}}-lib/: Cargo.toml
{{project-name}}-lib/tests/: e2e.rs
