[package]
name = "mem0-blueprint-bin"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
mem0-blueprint-lib.workspace = true

blueprint-sdk = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tower.workspace = true
clap = { version = "4.0", features = ["derive"] }
serde_json.workspace = true

[build-dependencies]
mem0-blueprint-lib.workspace = true
blueprint-sdk = { workspace = true, features = ["macros", "build"] }

[package.metadata.blueprint]
sources = [
    { type = "Container", registry = "docker.io", image = "yourusername/mem0-blueprint", tag = "0.1.0" },
]
